# hex_game

./: .gitignore  Makefile  README.md  generate_data_profile.prof  mcts_multi_profile.prof  pyproject.toml  ruff.toml  run.py
.github/workflows/: ci.yml
game/: board.py
graphics/: display.py  main.py
logs/test_run/: events.out.tfevents.1771801416.Ubuntu-MSI.57291.0
scripts/: profile_generate_data.py  profile_mcts.py
solve/: MCTS.py  mcts.py  model.py  train.py
src/hex_game/: main.py
src/hex_game/ai/: eval.py  mcts.py  model.py  train.py
src/hex_game/game/: board.py
src/hex_game/ui/: board_view.py  display.py  hex_utils.py  players.py
tests/: test_MCTS.py  test_board.py  test_generate_data.py  test_mcts.py  test_model.py  test_modes.py  test_parallel_gen.py
