[project]
name = "hex-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pygame>=2.6.1",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "types-networkx>=3.6.1.20260210",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
hex-play = "hex_game.main:main"
hex-train = "hex_game.ai.train:train"

[tool.setuptools.packages.find]
where = ["src"]


[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
check_untyped_defs = true
ignore_missing_imports = true
